// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectIndicator Container renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SelectState
    handleSelect={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <label
          className="label"
>
          State
</label>,
        <div
          className="control"
>
          <div
                    className="select"
          >
                    <select
                              disabled={false}
                              onChange={[Function]}
                              value=""
                    >
                              <option
                                        disabled={true}
                                        value=""
                              >
                                        Select state
                              </option>
                    </select>
          </div>
</div>,
      ],
      "className": "field",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "State",
          "className": "label",
        },
        "ref": null,
        "rendered": "State",
        "type": "label",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="select"
>
            <select
                        disabled={false}
                        onChange={[Function]}
                        value=""
            >
                        <option
                                    disabled={true}
                                    value=""
                        >
                                    Select state
                        </option>
            </select>
</div>,
          "className": "control",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <select
              disabled={false}
              onChange={[Function]}
              value=""
>
              <option
                            disabled={true}
                            value=""
              >
                            Select state
              </option>
</select>,
            "className": "select",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                Array [
                  <option
                    disabled={true}
                    value=""
>
                    Select state
</option>,
                ],
              ],
              "disabled": false,
              "onChange": [Function],
              "value": "",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "-1",
                "nodeType": "host",
                "props": Object {
                  "children": "Select state",
                  "disabled": true,
                  "value": "",
                },
                "ref": null,
                "rendered": "Select state",
                "type": "option",
              },
            ],
            "type": "select",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="label"
>
            State
</label>,
          <div
            className="control"
>
            <div
                        className="select"
            >
                        <select
                                    disabled={false}
                                    onChange={[Function]}
                                    value=""
                        >
                                    <option
                                                disabled={true}
                                                value=""
                                    >
                                                Select state
                                    </option>
                        </select>
            </div>
</div>,
        ],
        "className": "field",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "State",
            "className": "label",
          },
          "ref": null,
          "rendered": "State",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="select"
>
              <select
                            disabled={false}
                            onChange={[Function]}
                            value=""
              >
                            <option
                                          disabled={true}
                                          value=""
                            >
                                          Select state
                            </option>
              </select>
</div>,
            "className": "control",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <select
                disabled={false}
                onChange={[Function]}
                value=""
>
                <option
                                disabled={true}
                                value=""
                >
                                Select state
                </option>
</select>,
              "className": "select",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  Array [
                    <option
                      disabled={true}
                      value=""
>
                      Select state
</option>,
                  ],
                ],
                "disabled": false,
                "onChange": [Function],
                "value": "",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "-1",
                  "nodeType": "host",
                  "props": Object {
                    "children": "Select state",
                    "disabled": true,
                    "value": "",
                  },
                  "ref": null,
                  "rendered": "Select state",
                  "type": "option",
                },
              ],
              "type": "select",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SelectIndicator Container renders correctly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SelectState
    handleSelect={[Function]}
    measureId="123"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <label
          className="label"
>
          State
</label>,
        <div
          className="control"
>
          <div
                    className="select"
          >
                    <select
                              disabled={false}
                              onChange={[Function]}
                              value=""
                    >
                              <option
                                        disabled={true}
                                        value=""
                              >
                                        Select state
                              </option>
                    </select>
          </div>
</div>,
      ],
      "className": "field",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "State",
          "className": "label",
        },
        "ref": null,
        "rendered": "State",
        "type": "label",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="select"
>
            <select
                        disabled={false}
                        onChange={[Function]}
                        value=""
            >
                        <option
                                    disabled={true}
                                    value=""
                        >
                                    Select state
                        </option>
            </select>
</div>,
          "className": "control",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <select
              disabled={false}
              onChange={[Function]}
              value=""
>
              <option
                            disabled={true}
                            value=""
              >
                            Select state
              </option>
</select>,
            "className": "select",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                Array [
                  <option
                    disabled={true}
                    value=""
>
                    Select state
</option>,
                ],
              ],
              "disabled": false,
              "onChange": [Function],
              "value": "",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "-1",
                "nodeType": "host",
                "props": Object {
                  "children": "Select state",
                  "disabled": true,
                  "value": "",
                },
                "ref": null,
                "rendered": "Select state",
                "type": "option",
              },
            ],
            "type": "select",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="label"
>
            State
</label>,
          <div
            className="control"
>
            <div
                        className="select"
            >
                        <select
                                    disabled={false}
                                    onChange={[Function]}
                                    value=""
                        >
                                    <option
                                                disabled={true}
                                                value=""
                                    >
                                                Select state
                                    </option>
                        </select>
            </div>
</div>,
        ],
        "className": "field",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "State",
            "className": "label",
          },
          "ref": null,
          "rendered": "State",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="select"
>
              <select
                            disabled={false}
                            onChange={[Function]}
                            value=""
              >
                            <option
                                          disabled={true}
                                          value=""
                            >
                                          Select state
                            </option>
              </select>
</div>,
            "className": "control",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <select
                disabled={false}
                onChange={[Function]}
                value=""
>
                <option
                                disabled={true}
                                value=""
                >
                                Select state
                </option>
</select>,
              "className": "select",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  Array [
                    <option
                      disabled={true}
                      value=""
>
                      Select state
</option>,
                  ],
                ],
                "disabled": false,
                "onChange": [Function],
                "value": "",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "-1",
                  "nodeType": "host",
                  "props": Object {
                    "children": "Select state",
                    "disabled": true,
                    "value": "",
                  },
                  "ref": null,
                  "rendered": "Select state",
                  "type": "option",
                },
              ],
              "type": "select",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
